--- a/src/views/sharelink.ejs
+++ b/src/views/sharelink.ejs
@@ -2,6 +2,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script defer src="/js/copyToClipboard.js"></script>
 <link rel="stylesheet" href="/css/global.css">
 <link rel="stylesheet" href="/css/colors.css">
 <link rel="stylesheet" href="/css/fileupload.css">
@@ -13,7 +14,7 @@
       <a>
         <%= shareUrl %>
       </a>
-      <button>Copy Url</button>
+      <button onclick="copyToClipboard('<%= shareUrl %>')">Copy Url</button>
     </div>
   <% } else { %>
     <p class="failure">Error: your file was not uploaded</p>
