renamed all files to follow kebab-case

--- a/src/views/share-link.ejs
+++ b/src/views/share-link.ejs
@@ -2,10 +2,10 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script defer src="/js/copyToClipboard.js"></script>
+<script defer src="/js/copy-to-clipboard.js"></script>
 <link rel="stylesheet" href="/css/global.css">
 <link rel="stylesheet" href="/css/colors.css">
-<link rel="stylesheet" href="/css/fileupload.css">
+<link rel="stylesheet" href="/css/file-upload.css">
 <title>Share Link</title>
 <section>
   <% if (shareUrl) { %>
