--- a/src/views/file-upload.ejs
+++ b/src/views/file-upload.ejs
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/css/global.css">
 <link rel="stylesheet" href="/css/colors.css">
-<link rel="stylesheet" href="/css/fileupload.css">
+<link rel="stylesheet" href="/css/file-upload.css">
 <title>Upload Files</title>
 <section>
   <h1>Upload files</h1>
